--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb1529e2dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa7e6815610&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb152631810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb15265fd10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa7e6ddf950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa7e6ddfb50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb152bf91d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb152c046d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa7e7394290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa7e7394490&gt;]</pre>
 </div>
 
 </div>
