--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa7e6815610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f884e732f50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa7e6ddf950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa7e6ddfb50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f884eb48cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f884eb48e90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa7e7394290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa7e7394490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f884f0f4610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f884f0f47d0&gt;]</pre>
 </div>
 
 </div>
