--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5a60484690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb3a10fa150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a5fe398d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5a5fe39ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3a0dcb650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb3a0dfecd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a603f0250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5a603f0450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3a1390f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb3a13a5610&gt;]</pre>
 </div>
 
 </div>
