--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f12d0e84d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f45964f2cd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f12d0afdad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f12d0afdcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4595ebcad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4595ebccd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f12d10b1450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f12d10b1650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f45964643d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f45964645d0&gt;]</pre>
 </div>
 
 </div>
