--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f19fdf5be90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f253f550190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19fd1597d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19fd1599d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f253f1caa90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f253f1cac90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19fd70d110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19fd70d310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f253f77a410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f253f77a610&gt;]</pre>
 </div>
 
 </div>
