--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd5186b9a90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fae0e499410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd5177edb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd5177edd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae0e4a5d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae0e4d8a10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd517da2450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd517da2690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae0ea5e610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae0ea7c310&gt;]</pre>
 </div>
 
 </div>
