--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa1d69a40d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f774feaad90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1d65f9950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa1d65f9b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f774efe18d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f774efe1ad0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa1d6bac190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa1d6bac390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f774f594190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f774f594390&gt;]</pre>
 </div>
 
 </div>
