--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f774feaad90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f753335b350&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f774efe18d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f774efe1ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7532fa8890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7532fd2d90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f774f594190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f774f594390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7533573190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f753357e690&gt;]</pre>
 </div>
 
 </div>
