--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f753335b350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f03b6f86b50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7532fa8890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7532fd2d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f03b6c50c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f03b6c50e10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7533573190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f753357e690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f03b71f5510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f03b71f5710&gt;]</pre>
 </div>
 
 </div>
