--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1dbad1a2d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4518426990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1dba6d8a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1dba6d8c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4517de9b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4517de9d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1dbac8a310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1dbac8a510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f451838e3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f451838e5d0&gt;]</pre>
 </div>
 
 </div>
