--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc763817dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7febdabede10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc763189950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc763189b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7febd9c4a9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7febd9c4abd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc76373c290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc76373c490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7febda1fe390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7febda1fe590&gt;]</pre>
 </div>
 
 </div>
