--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7fcd7515d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7eff8276a750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7fcd3acb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7fcd3acd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7eff821308d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7eff82130ad0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7fcd952510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7fcd952710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7eff826e4210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7eff826e4410&gt;]</pre>
 </div>
 
 </div>
