--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4e4e9e09d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9f0cad3c90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e4e36ca10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e4e36cc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f0d09c990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9f0d09cb10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e4e9252d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e4e9254d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9f0d64e350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9f0d64e4d0&gt;]</pre>
 </div>
 
 </div>
