--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe0b6db5990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcdb7b26750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe0b7382950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe0b7393a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcdb77ef9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcdb77efbd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe0b793e310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe0b7949410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcdb7de8750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcdb7da14d0&gt;]</pre>
 </div>
 
 </div>
