--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe7a50e09d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd328ade150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7a4ab2c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe7a4ab2e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd328453d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd328453f10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7a505e590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe7a505e790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd3289fe650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd3289fe850&gt;]</pre>
 </div>
 
 </div>
