--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff131580b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff9f4a02050&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff130ef4ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff130ef4cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9f4392d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff9f438bd10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff13149c3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff13149c5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff9f4937410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff9f499ba90&gt;]</pre>
 </div>
 
 </div>
