--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f215fb45790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0722d72f50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f215f7a1b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f215f7a1d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07229ca990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f07229cab90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f215fd47410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f215fd47610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0722f842d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0722f844d0&gt;]</pre>
 </div>
 
 </div>
