--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0722d72f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f071635e1d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f07229ca990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f07229cab90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f071609a050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f071609a1d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0722f842d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0722f844d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0716648450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0716648650&gt;]</pre>
 </div>
 
 </div>
