--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6f2b339450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc59d528d50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6f2acd29d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6f2acfab50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc59d5627d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc59d562a10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6f2b2a32d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6f2b2ae450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc59db1f110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc59db1f350&gt;]</pre>
 </div>
 
 </div>
