--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fab8901b910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f92a9738090&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab88ff99d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab88ff9bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f92a9d0fb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f92a9d0fd50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fab895a6310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fab895a6510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f92aa2b4450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f92aa2b4650&gt;]</pre>
 </div>
 
 </div>
